tests/toy/neg/000971_mutation.toylang
program a = { if a then 0 sleep; } .
